fix : updated carousal spacing on mob

--- a/t24-frontend-main/src/app/components/AutomotiveSummit/auto.module.css
+++ b/t24-frontend-main/src/app/components/AutomotiveSummit/auto.module.css
@@ -59,7 +59,7 @@
     }
   }
   .mobile{
-    background-image: url('../../../../public/Group\ 14038.svg');
+    background-image: url('/Group\ 14038.svg');
     background-position: center;
     background-repeat: no-repeat;
     /* background-size: fill; */
